Fix settings url and view. Move and update script tags.
Moved script tags to the bottom of the body element for performance.
Add decorator to settings view so the URL will work for instance ids.
Updated to latest jquery and removed protocol expression in script
tags to let the browser choose between http and https.

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -4,8 +4,6 @@
     <title>{% block title %}Open Tree Map Cloud{% endblock title %}</title>
     
     <meta charset="utf-8" />
-    <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
     {% block head_extra %}
     {% endblock head_extra %}
@@ -13,5 +11,11 @@
   <body>
     {% block body %}
     {% endblock body %}
+
+    <script src="//documentcloud.github.com/underscore/underscore-min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    {% block scripts %}
+    {% endblock scripts %}
   </body>
 </html>
