--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{% block title %}Open Tree Map Cloud{% endblock title %}</title>
-    
+
     <meta charset="utf-8" />
 
     {% block head_extra %}
@@ -14,6 +14,9 @@
 
     <script src="//documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+    <script src="{{ ROOT_URL }}/{{ instance.id}}/config/settings.js"></script>
+    <script src="{{ STATIC_URL }}/js/output/app.js"></script>
 
     {% block scripts %}
     {% endblock scripts %}
