--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -15,7 +15,7 @@
     <script src="//documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
-    <script src="{{ ROOT_URL }}/{{ instance.id}}/config/settings.js"></script>
+    <script src="{{ ROOT_URL }}/{{ request.instance.id }}/config/settings.js"></script>
     <script src="{{ STATIC_URL }}/js/output/app.js"></script>
 
     {% block scripts %}
