--- a/opentreemap/treemap/templates/treemap/index.html
+++ b/opentreemap/treemap/templates/treemap/index.html
@@ -8,7 +8,7 @@
   <p>Get started:</p>
   <ul>
     <li>
-      <a href="/{{ instance.id }}/trees/">View the map page</a>
+      <a href="/{{ request.instance.id }}/trees/">View the map page</a>
     </li>
   </ul>
 {% endblock body %}
