Add UTFGrid movement support
This is really just a sketch of how it would work. In particular, it
provides mechanics for adding a new interactive layer and relevant
callback.

So far the callback is sort of useless.

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -3,7 +3,7 @@
 {% block title %}Open Tree Map Test{% endblock title %}
 
 {% block body %}
-  <span>Windshaft test</span>
+  <span>Windshaft test <span id="attrs"></span></span>
   <div id="map" style="width: 800px; height: 800px"></div>
 {% endblock body %}
 
