--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -2,10 +2,12 @@
 
 {% block title %}Open Tree Map Test{% endblock title %}
 
+{% block scripts %}
+<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+<script src="{{ STATIC_URL }}js/src/map.js"></script>
+{% endblock scripts %}
+
 {% block body %}
   <span>Windshaft test <span id="attrs"></span></span>
   <div id="map" style="width: 800px; height: 800px"></div>
 {% endblock body %}
-
-{% block scripts %}
-{% endblock scripts %}
