--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -3,6 +3,7 @@
 {% block title %}Open Tree Map Test{% endblock title %}
 
 {% block scripts %}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/openlayers.css">
 <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script src="{{ STATIC_URL }}js/src/map.js"></script>
 {% endblock scripts %}
