--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -21,5 +21,8 @@
 
     {% block scripts %}
     {% endblock scripts %}
+
+    {% block templates %}
+    {% endblock templates %}
   </body>
 </html>
