Run search when enter is pressed in a text field
I kept changing the filer value and hitting enter, expecting the page to
update.

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -29,9 +29,9 @@
   <div>
     <h2>Selected: <span id="attrs"></h2>
     <h2>Search</h2>
-    <div>Species Id: <input id="search-species"></div>
-    <div>DBH Min: <input id="dbh-min"></div>
-    <div>DBH Max: <input id="dbh-min"></div>
+    <div>Species Id: <input data-class="search" id="search-species"></div>
+    <div>DBH Min: <input data-class="search" id="dbh-min"></div>
+    <div>DBH Max: <input data-class="search" id="dbh-min"></div>
     <button id="perform-search">Go</button>
   </div>
   <div id="search-results"></div>
