--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -29,6 +29,15 @@
   <div>
     <h2>Selected: <span id="attrs"></h2>
     <h2>Search</h2>
+    <div>
+      Boundaries:
+      <select data-class="search" id="boundary">
+        <option value="none">None</option>
+        {% for boundary in bounds %}
+        <option value="{{ boundary.pk }}">{{ boundary.name }}</option>
+        {% endfor %}
+      </select>
+    </div>
     <div>Species Id: <input data-class="search" id="search-species"></div>
     <div>DBH Min: <input data-class="search" id="dbh-min"></div>
     <div>DBH Max: <input data-class="search" id="dbh-min"></div>
