Fix DOM ID in map.html
Copy paste bug

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -40,7 +40,7 @@
     </div>
     <div>Species Id: <input data-class="search" id="search-species"></div>
     <div>DBH Min: <input data-class="search" id="dbh-min"></div>
-    <div>DBH Max: <input data-class="search" id="dbh-min"></div>
+    <div>DBH Max: <input data-class="search" id="dbh-max"></div>
     <button id="perform-search">Go</button>
   </div>
   <div id="search-results"></div>
