Rename base template section from body to content
Name the section body is a little confusing because it does not create the
entire content of the <body> tag. The name content is more consistant
with other Django template examples I have seen (registration)

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -9,8 +9,8 @@
     {% endblock head_extra %}
   </head>
   <body>
-    {% block body %}
-    {% endblock body %}
+    {% block content %}
+    {% endblock content %}
 
     {% block base_scripts %}
       <script src="//documentcloud.github.com/underscore/underscore-min.js"></script>
