--- a/opentreemap/treemap/templates/treemap/index.html
+++ b/opentreemap/treemap/templates/treemap/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Open Tree Map Home{% endblock title %}
 
-{% block body %}
+{% block content %}
   <p>Welcome to the OTMC landing page.</p>
 
   <p>Get started:</p>
@@ -11,4 +11,4 @@
       <a href="/{{ request.instance.id }}/trees/">View the map page</a>
     </li>
   </ul>
-{% endblock body %}
+{% endblock content %}
