--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -25,7 +25,7 @@
 </script>
 {% endblock templates %}
 
-{% block body %}
+{% block content %}
   <div>
     <h2>Selected: <span id="attrs"></h2>
     <h2>Search</h2>
@@ -57,4 +57,4 @@
     <div id="search-results"></div>
   </div>
   <div id="map" style="width: 800px; height: 800px"></div>
-{% endblock body %}
+{% endblock content %}
