--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -5,6 +5,6 @@
 {% block head_extra %}
 {% endblock head_extra %}
 
-{% block body %}
+{% block content %}
 This page will contain details about the tree.
-{% endblock body %}
+{% endblock content %}
