--- a/opentreemap/treemap/templates/treemap/recent_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_edits.html
@@ -2,7 +2,7 @@
 
 {% block title %}Recent Edits{% endblock title %}
 
-{% block body %}
+{% block content %}
 
 <h1>
 Recent Edits
@@ -110,4 +110,4 @@ Next &gt;&gt;
 {% endif %}
 
 
-{% endblock body %}
+{% endblock content %}
