--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -4,8 +4,16 @@
 
 {% block scripts %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/openlayers.css">
-<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
-<script src="{{ STATIC_URL }}js/src/map.js"></script>
+<script>
+(function(require) {
+    var $ = require("jquery"),
+        app = require("treemap");
+
+        $(function(){
+            app.init(otm.settings);
+        })
+})(require);
+</script>
 {% endblock scripts %}
 
 {% block body %}
