Refactor settings.js templating to support root pages
The previous settings.js templating assumed that the URL always contained
an instance ID. Now that we are starting to add 'top-level' pages (e.g.
user page) we need a settings.js template that works without an
instance.

As part of this change I fixed script src urls with double slashes and
added a simple context processor to make the SITE_ROOT setting from
settings.py available to all templates.

I changed mimetypes from application/x-javascript to the now standard
application/javascript (reference: http://stackoverflow.com/a/9664327)

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -12,10 +12,17 @@
     {% block content %}
     {% endblock content %}
 
-    {% block base_scripts %}
-      <script src="{{ ROOT_URL }}/{{ request.instance.id }}/config/settings.js"></script>
-      <script src="{{ STATIC_URL }}/js/treemap.js"></script>
-    {% endblock base_scripts %}
+    {% block config_scripts %}
+      {% if request.instance %}
+        <script src="{{ SITE_ROOT }}{{ request.instance.id }}/config/settings.js"></script>
+      {% else %}
+        <script src="{{ SITE_ROOT }}config/settings.js"></script>
+      {% endif %}
+    {% endblock config_scripts %}
+
+    {% block global_scripts %}
+      <script src="{{ STATIC_URL }}js/treemap.js"></script>
+    {% endblock global_scripts %}
 
     {% block scripts %}
     {% endblock scripts %}
