--- a/opentreemap/treemap/templates/registration/password_change_form.html
+++ b/opentreemap/treemap/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block body %}
+{% block content %}
 <form method="post" action=".">
   {% csrf_token %} 
   {{ form.as_p }}
