--- a/opentreemap/treemap/templates/registration/password_reset_complete.html
+++ b/opentreemap/treemap/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block body %}
+{% block content %}
 
 <p>{% trans "Password reset successfully" %}</p>
 
