--- a/opentreemap/treemap/templates/registration/password_change_done.html
+++ b/opentreemap/treemap/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block body %}
+{% block content %}
 <p>{% trans "Password changed" %}</p>
 {% endblock %}
