Add very basic styling to typeahead dropdown

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -4,6 +4,7 @@
 
 {% block scripts %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/openlayers.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/otm.css">
 <script>
 (function(require) {
     var $ = require("jquery"),
