Convert boundary dropdown into an typeahead.js autocomplete

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -52,5 +52,9 @@
   <p>{{common_name}}</p>
   <p>{{scientific_name}}</p>
 </script>
+<script id="boundary-element-template" type="text/x-mustache-template">
+  <p>{{name}}</p>
+  <p>{{category}}</p>
+</script>
 {% endverbatim %}
 {% endblock templates %}
