Fix eco template to reflect updated view response
The names of the keys in the basis dictionary changed at some point,
making the template always show empty values for plot and tree counts.

--- a/opentreemap/treemap/templates/treemap/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/eco_benefits.html
@@ -7,7 +7,7 @@
     {% endfor %}
   </table>
   <div>
-    Search returned {{ basis.n_total_plots }} plots and
-    {{ basis.n_total_trees }} trees
+    Search returned {{ basis.n_plots }} plots and
+    {{ basis.n_trees_used }} trees out of {{ basis.n_trees_total }} total trees.
   </div>
 </div>
