Refactor based on code review suggestions

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -2,9 +2,12 @@
 
 {% block title %}Open Tree Map Test{% endblock title %}
 
-{% block scripts %}
+{% block head_extra %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/openlayers.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/otm.css">
+{% endblock head_extra %}
+
+{% block scripts %}
 <script>
 (function(require) {
     var $ = require("jquery"),
