--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -40,6 +41,7 @@
     {% endblock config_scripts %}
 
     {% block global_scripts %}
+      <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
       <script src="{{ STATIC_URL }}js/treemap.js"></script>
     {% endblock global_scripts %}
 
