--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Open Tree Map | Tree Detail{% endblock title %}
+{% block title %}{% load i18n %}Open Tree Map | {% trans "Tree Detail" %}{% endblock title %}
 
 {% block head_extra %}
 {% endblock head_extra %}
