Started on a new-and-improved tree detail template

--- a/prototype/css/responsive.css
+++ b/prototype/css/responsive.css
@@ -38,6 +38,18 @@
 		left: 375px;
 	}
 
+	.right {
+		width: 100%;
+		clear: both;
+		border-top: 1px solid #eee;
+		margin-top: 50px;
+		padding-bottom: 120px;
+	}
+
+	.right textarea {
+		width: 98%;
+	}
+
 }
  
 
