Add i18n to ecobenfit labels and search counts

--- a/opentreemap/treemap/templates/treemap/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/eco_benefits.html
@@ -8,9 +8,24 @@
     {% endfor %}
   </table>
   <div>
-    {% blocktrans %}
-      Search returned {{ basis.n_plots }} plots and
-      {{ basis.n_trees_used }} trees out of {{ basis.n_trees_total }} total trees.
+    {% comment %}Translators: This is the beginning of the statement "Search returned 23 plots and 21 trees..."{% endcomment %}
+    {% trans "Search returned" %}
+    {% blocktrans count basis.n_plots as plot_count %}
+      {{ plot_count }} plot
+    {% plural %}
+      {{ plot_count }} plots
+    {% endblocktrans %}
+    and
+    {% blocktrans count basis.n_trees_used as tree_count %}
+      {{ tree_count }} tree
+    {% plural %}
+      {{ tree_count }} trees
+    {% endblocktrans %}
+    out of
+    {% blocktrans count basis.n_trees_total as total_tree_count %}
+      {{ total_tree_count }} total tree.
+    {% plural %}
+      {{ total_tree_count }} total trees.
     {% endblocktrans %}
   </div>
 </div>
