Add recent user edits partial template to the user page.
This commit changes the browserify bundle structure.
There is now one entry file per-page (currently map and user), which are
listed under the alias configuration in the Gruntfile.

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -11,7 +11,7 @@
 <script>
 (function(require) {
     var $ = require("jquery"),
-        app = require("treemap");
+        app = require("app");
 
     $(function(){
         app.init(otm.settings);
