Allow each instance to set eco benefit currency values
Provides a model (BenefitCurrencyConversion) that stores the
eco-unit-to-currency-unit factors.

Note that these values should not actually change with localization. For
instance, if someone is the UK decides to use £ for their currency
unit, it should show as £ to everyone (or, show in a local currency but
apply the exchange rate)

If an instance doesn't specify a conversion set, currency amounts will
simply be hidden.

--- a/opentreemap/treemap/templates/treemap/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/eco_benefits.html
@@ -4,8 +4,12 @@
       <span class="benefit-label">{{ benefit.label }}</span>
       <br>
       <span class="content">{{ benefit.value }} {{ benefit.unit }}
+        {% if benefit.currency_saved %}
         <br>
-        $??.?? saved
+        {{ currency_symbol }}{{ benefit.currency_saved }}
+        {% comment %}Translators: Money saved{% endcomment %}
+        {% trans "saved" %}
+        {% endif %}
       </span>
     <hr>
     {% endfor %}
