Update Role and Repuation code to access InstanceUser
A User object no longer has "roles" or "reputation" -- for that you need an InstanceUser.
My strategy is to mostly avoid accessing InstanceUser directly, using instead User methods
get_role(), get_reputation(), and get_instance_permissions(). (Internally these access
get_instance_user(), which is available when necessary.)

So in this commit we update all the code which interacts with role and reputation.

Note that like User.save(), InstanceUser.save() saves with the system_user.

One bug fix:
* In create_plot(), don't create plot if tree height is invalid

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -7,7 +7,9 @@
 <div>{% trans "Username:" %} {{ user.username }}</div>
 <div>{% trans "Name:" %} {{ user.first_name }} {{ user.last_name }}</div>
 <div>{% trans "Email:" %} {{ user.email }}</div>
-<div>{% trans "Reputation:" %} {{ user.reputation }}</div>
+{% if reputation %}
+<div>{% trans "Reputation:" %} {{ reputation }}</div>
+{% endif %}
 <div>{% trans "Instance:" %} {{ instance_id }}</div>
 
 <h3>{% trans "Recent Edits" %}</h3>
