--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -19,7 +19,7 @@
     <a class="btn add-favorite" href="javascript:;">{% trans "Add to Favorites" %}</a>
     <hr>
     <h3>{% trans "Latest Update" %}</h3>
-    <p><a href="javascript:;">administrator</a> - July 18, 2013</p>
+    <p>{{ recent_activity.0.short_descr }}</p>
     <h5>20% {% trans "Complete" %}</h5>
     <div class="progress">
       <div class="bar" style="width: 20%;"></div>
@@ -30,11 +30,9 @@
     <hr>
     <h3>{% trans "Recent Edits" %}</h3>
     <ul>
-      <li>Today - <a href="javascript:;">administrator</a></li>
-      <li>7/31/13 - <a href="javascript:;">administrator</a></li>
-      <li>7/31/13 - <a href="javascript:;">administrator</a></li>
-      <li>7/31/13 - <a href="javascript:;">administrator</a></li>
-      <li>7/31/13 - <a href="javascript:;">administrator</a></li>
+      {% for audit in recent_activity %}
+      <li>{{ audit.short_descr }}</li>
+      {% endfor %}
     </ul>
   </div>
 
