Update search to work on all pages that extend base
In particular, pages that call init will get the dropdowns initialized
and any searching will redirect to the search page.

The map page overrides that javascript init functions to provide custom
mapping and searching.

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -141,7 +141,28 @@
     {% endblock global_scripts %}
 
     {% block scripts %}
+    <script type="text/javascript">
+      (function(require) {
+        var $ = require("jquery"),
+        app = require("app");
+
+        $(function(){
+          app.init(otm.settings);
+        })
+      })(require);
+    </script>
     {% endblock scripts %}
+
+    {% verbatim %}
+    <script id="species-element-template" type="text/x-mustache-template">
+      <p>{{common_name}}</p>
+      <p>{{scientific_name}}</p>
+    </script>
+    <script id="boundary-element-template" type="text/x-mustache-template">
+      <p>{{name}}</p>
+      <p>{{category}}</p>
+    </script>
+    {% endverbatim %}
 
     {% block templates %}
     {% endblock templates %}
