--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -14,7 +14,7 @@
         app = require("app");
 
     $(function(){
-        app.init(otm.settings);
+        app.initMapPage(otm.settings);
     })
 })(require);
 </script>
@@ -68,14 +68,4 @@
 
 
 {% block templates %}
-{% verbatim %}
-<script id="species-element-template" type="text/x-mustache-template">
-  <p>{{common_name}}</p>
-  <p>{{scientific_name}}</p>
-</script>
-<script id="boundary-element-template" type="text/x-mustache-template">
-  <p>{{name}}</p>
-  <p>{{category}}</p>
-</script>
-{% endverbatim %}
 {% endblock templates %}
