Don't show ecobenefits sections if there are no ecobenefits

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -152,6 +152,7 @@
     <hr>
 
     <!-- Yearly Ecosystem Services -->
+    {% if benefits %}
     <table class="table table-striped">
       <h5>{% trans "Yearly Ecosystem Services" %}</h5>
       <tbody>
@@ -165,6 +166,7 @@
       </tbody>
     </table>
     <hr>
+    {% endif %}
 
   </div>
 
