Use is_authenticated in templates
More self documenting

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -173,7 +173,7 @@
   <div class="right">
     <h3>{% trans "Commments" %}</h3>
 
-    {% if request.user.username %}
+    {% if request.user.is_authenticated %}
       <form>
         <textarea rows=8></textarea><br>
         <button type="submit" class="btn">{% trans "Submit" %}</button>
