Replaced default Bootstrap icons with custom Fontello stack

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}css/fontello.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/application.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet">
 
